--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start Page</title>
-    <link rel="stylesheet" type="text/css" href="start style.css">
+    <title>QUIZZIE TIMIE</title>
+    <link rel="stylesheet" type="text/css" href="index style.css">
 </head>
 <body>
     <div class="background">
         <div class="info-title"><span></span></div>
         <div id="start">
-        <a href="http://127.0.0.1:5500/Instruction.html">
+        <a href="Instruction.html">
           <button id="start-button">
-              <img src="Images/Start.jpg" alt="Start" class="start-image">
-          </button>  
+              <img src="Images/start.jpg" alt="Start" class="start-image">
+          </button>
+
         </a>
+    </div>
+    <div class="logo">
+        <img src="Images/logo.png" class="img-logo">
     </div>
     </div>
 </body>
-</html>
