--- a/Instruction.html
+++ b/Instruction.html
@@ -33,7 +33,7 @@
                     </div><span></span>
                     </div>
             <div class="buttons">
-                <a href="http://127.0.0.1:5500/start.html">
+                <a href="http://127.0.0.1:5500/index.html">
                 <button class="button">Back</button>
                 </a>
                 <a href="http://127.0.0.1:5500/topic.html">
