--- a/Instruction.html
+++ b/Instruction.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instruction</title>
     <link rel="stylesheet" type="text/css" href="style Instruction.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
 </head>
 <body>
         <div class="background">
         <div class="info_box">
-            <div class="info-title"><span></span></div>
+           <div class="info-animation"><span></span></div>
             <div class="info-list">
-                <div class="info"><p style="color: black;">Hello, hope you are good and enthusiastic.</p></div>
-                <div class="info"><p style="color:black;">1. Quiz will consist of six topics. You can select anyone of them 
-                    according to your interest.</div>
-                <div class="info"><p style="color: black">2. Quiz also consists different levels as described below :</p> </div>
-                 <div class="info"><p style="color: black;">   (i) AS SILLY AS FUN : AS the name suggests, it is an easy level where you will get 
-                     300 seconds for 10 questions.</p></div>
-                <div class="info"><p style="color: black;">  (ii) AS STRAIGHT AS LINE : It is medium level, where you will get 
-                    250 seconds for 10 questions.</p></div>
-                <div class="info"><p style="color: black;">   (iii) AS SCARY AS FIRE : It is going to be a hard level,where you will get 
-                    200 seconds for 10 questions.</p></div>
-                <div class="info"><p style="color: black;">  Choose any one level from these three levels.</P></div>
-                <div class="info"><p style="color: black;">3. Now the quiz starts, you cannot quit the quiz in between.</p></div>
-                <div class="info"><p style="color: black;">4. You can select one option from given four options. Once you select
-                     you cannot change the option</p></div>
-                     <div class="info"><p style="color: black;">5. You cannot jump to your previous question again once the time gets over.</p></div>
-                     <div class="info"><p style="color: black;">6. Then your result will appear.</p></div>
-                     <div class="info"><p style="color: black;">7. At last, one feedback form will appear to be filled. Fill it truly, it helps
-                       us to improve our website and user experience.</p> </div>
+                <div class="title"><h1>INSTRUCTIONS : </h1></div>
+                <div class="info"><p style="color: black;">Hello, Hope you are Good and Enthusiastic !</p></div>
+                
+                    <ol class="info">
+                        <li> Quiz will consist of <strong>SIX</strong> topics. You can select anyone of them according to your interest.</li>
+                        <li><ul type="disc">  Quiz also consists different levels as described below :
+                  
+                    <li> <strong>AS SILLY AS FUN : </strong>AS the name suggests, it is an easy level where you will get 
+                     <strong> 300 seconds </strong> for 10 Questions.</li>
+                    <li><strong> AS STRAIGHT AS LINE :</strong> It is medium level, where you will get<strong> 250 seconds</strong> for 10 Questions.</li>
+                    <li> <strong>AS SCARY AS FIRE : </strong> It is going to be a hard level,where you will get <strong>200 seconds</strong> for 10 questions.</li>
+                  </ul>  </li>
+               <li> Choose any one level from these Three Levels.</li>
+                <li> Now the quiz starts, you <strong>can quit the quiz </strong>in between. Your Score is visible at top of your quiz card .</li>
+                <li> You can select one option from given four options. Once you select
+                    <strong> you cannot change the option .</strong></li>
+                     <li> You cannot go back to your previous question again .</li>
+                    <li> Then your result will appear.</li>
+                    <li> At last, one feedback form will appear to be filled. Fill it truly, it helps
+                       us to improve our website and user experience.</li>
                     </div><span></span>
                     </div>
             <div class="buttons">
