--- a/toughcomputer.html
+++ b/toughcomputer.html
@@ -218,6 +218,9 @@ body{
      font-weight: 700;
 
    }
+ a{
+     margin: 20px;
+   }
 </style>
 </head>
 <body>
@@ -276,7 +279,8 @@ body{
 </div>
 </section>
 <footer class="backpage-home">
-<a href="start.html"> BACK TO START BUTTON</a>
+<a href="topic.html">PLAY AGAIN</a>
+ <a href="http://localhost/DevJam/Feedback.php">GIVE FEEDBACK</a>
 
 </footer>
 </div>
