--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background">
         <div class="info-title"><span></span></div>
         <div id="start">
-        <a href="http://127.0.0.1:5500/Instruction.html">
+        <a href="Instruction.html">
           <button id="start-button">
               <img src="Images/start.jpg" alt="Start" class="start-image">
           </button>
