--- a/Instruction.html
+++ b/Instruction.html
@@ -36,10 +36,10 @@
                     </div><span></span>
                     </div>
             <div class="buttons">
-                <a href="http://127.0.0.1:5500/index.html">
+                <a href="index.html">
                 <button class="button">Back</button>
                 </a>
-                <a href="http://127.0.0.1:5500/topic.html">
+                <a href="topic.html">
                 <button class="button">Continue</button>
                 </a>
             </div>
