--- a/topic.html
+++ b/topic.html
@@ -12,31 +12,31 @@
           <div class="topic" >
             <img src="Images/maths.jpg">
             <div id="math" class="title">
-              <a href="http://127.0.0.1:5500/level%20maths.html">MASTER YOUR MIND</a></div>
+              <a href="level maths.html">MASTER YOUR MIND</a></div>
             </div>
             <div class="topic" >
             <img src="Images/science.jpg">
             <div id="science" class="title">
-              <a href="http://127.0.0.1:5500/level%20science.html">FALLING APPLE</a></div>
+              <a href="level science.html">FALLING APPLE</a></div>
             </div>
             <div class="topic" >
             <img src="Images/history.jpg">
-            <div id="history" class="title"><a href="http://127.0.0.1:5500/level%20history.html">TO CREATE HISTORY</a></div>
+            <div id="history" class="title"><a href="level history.html">TO CREATE HISTORY</a></div>
             </div>
             <div class="topic" >
             <img src="Images/sports.jpg">
-            <div id="sports" class="title"><a href="http://127.0.0.1:5500/level%20sports.html">GRAB YOUR POSITION</a></div>
+            <div id="sports" class="title"><a href="level sports.html">GRAB YOUR POSITION</a></div>
             </div>
             <div class="topic" >
             <img src="Images/computer.jpg">
-                  <div id="computer" class="title"><a href="http://127.0.0.1:5500/level%20computer.html">TODAY'S DEMAND</a></div>
+                  <div id="computer" class="title"><a href="level computer.html">TODAY'S DEMAND</a></div>
             </div>
             <div class="topic" >
             <img src="Images/astronomy.jpg">
-              <div id="astronomy" class="title"><a href="http://127.0.0.1:5500/level%20astronomy.html">EXPLORE ABOVE SKIES</a></div>
+              <div id="astronomy" class="title"><a href="level astronomy.html">EXPLORE ABOVE SKIES</a></div>
                </div>
                  <div class="Start">
-            <button class="restart"><a href="http://127.0.0.1:5500/Instruction.html">BACK</a></button></div>
+            <button class="restart"><a href="Instruction.html">BACK</a></button></div>
         </div>
       </div>
       </body>
