--- a/level computer.html
+++ b/level computer.html
@@ -10,15 +10,15 @@
 </head>
 <body> 
     <div class="background"></div>
-    <a href="http://127.0.0.1:5500/easycomputer.html">
+    <a href="easycomputer.html">
         <button class="button">AS SILLY AS FUN</button></a>
-    <a href="http://127.0.0.1:5500/mediumcomputer.html">
+    <a href="mediumcomputer.html">
         <button class="button">
         AS STRAIGHT AS LINE</button></a>
-    <a href="http://127.0.0.1:5500/toughcomputer.html"><button class="button">
+    <a href="toughcomputer.html"><button class="button">
         AS SCARCY AS FIRE</button></a>
     <div class="back">
-    <a href="http://127.0.0.1:5500/topic.html"><button class="button">BACK</button></a>
+    <a href="topic.html"><button class="button">BACK</button></a>
     </div>
 </body>
 </html>
