--- a/level history.html
+++ b/level history.html
@@ -10,15 +10,15 @@
 </head>
 <body> 
     <div class="background"></div>
-    <a href="http://127.0.0.1:5500/easyhistory.html">
+    <a href="easyhistory.html">
         <button class="button">AS SILLY AS FUN</button></a>
-    <a href="http://127.0.0.1:5500/mediumhistory.html">
+    <a href="mediumhistory.html">
         <button class="button">
         AS STRAIGHT AS LINE</button></a>
-    <a href="http://127.0.0.1:5500/toughhistory.html"><button class="button">
+    <a href="toughhistory.html"><button class="button">
         AS SCARCY AS FIRE</button></a>
     <div class="back">
-    <a href="http://127.0.0.1:5500/topic.html"><button class="button">BACK</button></a>
+    <a href="topic.html"><button class="button">BACK</button></a>
     </div>
 </body>
 </html>
