--- a/level science.html
+++ b/level science.html
@@ -10,15 +10,15 @@
 </head>
 <body> 
     <div class="background"></div>
-    <a href="http://127.0.0.1:5500/easyscience.html">
+    <a href="easyscience.html">
         <button class="button">AS SILLY AS FUN</button></a>
-    <a href="http://127.0.0.1:5500/mediumscience.html">
+    <a href="mediumscience.html">
         <button class="button">
         AS STRAIGHT AS LINE</button></a>
-    <a href="http://127.0.0.1:5500/toughscience.html"><button class="button">
+    <a href="toughscience.html"><button class="button">
         AS SCARCY AS FIRE</button></a>
     <div class="back">
-    <a href="http://127.0.0.1:5500/topic.html"><button class="button">BACK</button></a>
+    <a href="topic.html"><button class="button">BACK</button></a>
     </div>
 </body>
 </html>
