--- a/easymaths.html
+++ b/easymaths.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPORT QUIZ</title>
+  <title>MATHS QUIZ</title>
   <script src="jquery-3.6.0.min.js"></script>
   
   <script type="text/javascript" src="easy-maths.js"></script>
@@ -218,6 +218,9 @@
           font-weight: 700;
 
         }
+       a{
+     margin: 20px;
+   }
   </style>
 </head>
 <body>
@@ -276,7 +279,8 @@
      </div>
    </section>
    <footer class="backpage-home">
-     <a href="start.html"> BACK TO START BUTTON</a>
+     <a href="topic.html">PLAY AGAIN</a>
+         <a href="http://localhost/DevJam/Feedback.php">GIVE FEEDBACK</a>
    </footer>
   </div>
   
