--- a/easysport.html
+++ b/easysport.html
@@ -219,6 +219,10 @@
           font-weight: 700;
 
         }
+       a{
+     margin: 20px;
+   }
+   
   </style>
 </head>
 <body>
@@ -277,7 +281,8 @@
      </div>
    </section>
    <footer class="backpage-home">
-     <a href="start.html"> BACK TO START BUTTON</a>
+     <a href="topic.html">PLAY AGAIN</a>
+        <a href="http://localhost/DevJam/Feedback.php">GIVE FEEDBACK</a>
    </footer>
   </div>
   
