--- a/mediumastronomy.html
+++ b/mediumastronomy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPORT QUIZ</title>
+  <title>ASTRONOMY QUIZ</title>
   <script src="jquery-3.6.0.min.js"></script>
   
   <script type="text/javascript" src="medium-astronomy.js"></script>
@@ -218,6 +218,10 @@
           font-weight: 700;
 
         }
+       a{
+     margin: 20px;
+   }
+   
   </style>
 </head>
 <body>
@@ -236,7 +240,7 @@
       </header>
       <section>
         <div id="sport-que-box-easy-1" class="que-box-easy">
-          <span>The <strong>2004 Olympics</strong> were held in :</span>
+          <span></span>
         </div>
         <div class="option-box">
                     <span data-opt="1" onclick="answercheck(this)"></span> 
@@ -276,7 +280,8 @@
      </div>
    </section>
    <footer class="backpage-home">
-     <a href="start.html"> BACK TO START BUTTON</a>
+     <a href="topic.html">PLAY AGAIN</a>
+        <a href="http://localhost/DevJam/Feedback.php">GIVE FEEDBACK</a>
    </footer>
   </div>
   
