--- a/toughastronomy.html
+++ b/toughastronomy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SPORT QUIZ</title>
+<title>ASTRONOMY QUIZ</title>
 <script src="jquery-3.6.0.min.js"></script>
 
 <script type="text/javascript" src="tough-astronomy.js"></script>
@@ -239,7 +239,7 @@ body{
  </header>
  <section>
    <div id="sport-que-box-easy-1" class="que-box-easy">
-     <span>The <strong>2004 Olympics</strong> were held in :</span>
+     <span></span>
    </div>
    <div class="option-box">
                <span data-opt="1" onclick="answercheck(this)"></span> 
