--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZZIE TIMIE</title>
     <link rel="stylesheet" type="text/css" href="index style.css">
+    <link rel="icon" type="images/icon" href="Images/logo.png">
 </head>
 <body>
     <div class="background">
