--- a/Instruction.html
+++ b/Instruction.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instruction</title>
     <link rel="stylesheet" type="text/css" href="style Instruction.css">
+    <link rel="icon" type="images/icon" href="Images/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
 </head>
 <body>
