--- a/topic.html
+++ b/topic.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QUIZZIE TIMIE</title>
+    <title>TOPIC SELECTION</title>
     <link rel="stylesheet"type="text/css" href="topic style.css">
+    <link rel="icon" type="images/icon" href="Images/logo.png">
 </head>
 <body>
 <div class="background-topic">
