--- a/topic.html
+++ b/topic.html
@@ -11,29 +11,29 @@
 <div class="background-topic">
         <div class="bgd">
           <div class="topic" >
-            <img src="Images/maths.jpg">
+            <img src="Images/maths.jpg" class="straight">
             <div id="math" class="title">
               <a href="level maths.html">MASTER YOUR MIND</a></div>
             </div>
             <div class="topic" >
-            <img src="Images/science.jpg">
+            <img src="Images/science.jpg" class="reverse">
             <div id="science" class="title">
               <a href="level science.html">FALLING APPLE</a></div>
             </div>
             <div class="topic" >
-            <img src="Images/history.jpg">
+            <img src="Images/history.jpg" class="straight">
             <div id="history" class="title"><a href="level history.html">TO CREATE HISTORY</a></div>
             </div>
             <div class="topic" >
-            <img src="Images/sports.jpg">
+            <img src="Images/sports.jpg" class="reverse">
             <div id="sports" class="title"><a href="level sports.html">GRAB YOUR POSITION</a></div>
             </div>
             <div class="topic" >
-            <img src="Images/computer.jpg">
+            <img src="Images/computer.jpg" class="straight">
                   <div id="computer" class="title"><a href="level computer.html">TODAY'S DEMAND</a></div>
             </div>
             <div class="topic" >
-            <img src="Images/astronomy.jpg">
+            <img src="Images/astronomy.jpg" class="reverse">
               <div id="astronomy" class="title"><a href="level astronomy.html">EXPLORE ABOVE SKIES</a></div>
                </div>
                  <div class="Start">
