--- a/level history.html
+++ b/level history.html
@@ -7,6 +7,7 @@
     <title>Levels</title>
     <script src="jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="level astronomy style.css">
+    <link rel="icon" type="image/icon" href="Images/logo.png">
 </head>
 <body> 
     <div class="background"></div>
